<resources>
    <string name="app_name">Ukulele Trainer</string>

    <string name="banner_ad">Banner Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>

    <string name="banner_ad_unit_id">ca-app-pub-7213376997288299/9186740760</string>

    <string name="interstitial_load">Load Interstitial</string>
    <string name="interstitial_not_ready">Interstitial Not Ready</string>
    <string name="interstitial_loading">Loading Interstitial</string>
    <string name="interstitial_show">Show Interstitial</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="ad_test_device">Not Defined</string>

    <string name="category_ukulele">Ukulele Chords</string>
    <string name="category_ukulele_scales">Ukulele Scales</string>
    <string name="category_ukulele_tuner">Ukulele Tuner</string>
    <string name="category_ukulele_chord_sequencer">Ukulele Chord Sequencer</string>
    <string name="category_about">About</string>

    <string name="category_chord">Chord</string>
    <string name="category_selected_chord">Selected Chord</string>


    <string name="tuner_ukulele_header">Ukulele Tuner</string>
    <string name="tuner_top_string">Top String (4th String)</string>
    <string name="tuner_middle_top_string">3rd String</string>
    <string name="tuner_middle_bottom_string">2nd String</string>
    <string name="tuner_bottom_string">Bottom String (1st String)</string>
    <string name="tuner_stop_note">Stop</string>
    <string name="tuner_play_note">Play</string>


</resources>
