<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ukuleleTextView"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:layout_marginTop="30dp"
            android:text="@string/category_ukulele" />

        <!--<TextView-->
            <!--android:id="@+id/ukuleleScalesTextView"-->
            <!--style="@style/CategoryStyle"-->
            <!--android:background="@color/category_ukulele_scales"-->
            <!--android:text="@string/category_ukulele_scales" />-->

        <TextView
            android:id="@+id/ukuleleTunerTextView"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:layout_marginTop="30dp"
            android:text="@string/category_ukulele_tuner" />

        <TextView
            android:id="@+id/ukuleleChordSequencerTextView"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:layout_marginTop="30dp"
            android:text="@string/category_ukulele_chord_sequencer" />

        <TextView
            android:id="@+id/aboutTextView"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:layout_marginTop="30dp"
            android:text="@string/category_about" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>