<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gallery"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tuningTextView"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tuner_ukulele_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinnerUkuleleTunings"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:popupBackground="@drawable/gradient_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tuningTextView" />

        <Button
            android:id="@+id/buttonTopString"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinnerUkuleleTunings"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/buttonMiddleTopString"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerUkuleleTunings"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="150dp"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/buttonMiddleBottomString"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerUkuleleTunings"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="250dp"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/buttonBottomString"
            style="@style/CategoryStyle"
            android:background="@drawable/gradient_background"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerUkuleleTunings"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="350dp"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/textViewTopString"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonTopString"
            android:layout_alignBottom="@+id/buttonTopString"
            android:layout_alignLeft="@+id/textViewBottomString"
            android:layout_alignStart="@+id/textViewBottomString"
            android:text="@string/tuner_top_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewMiddleTopString"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonMiddleTopString"
            android:layout_alignBottom="@+id/buttonMiddleTopString"
            android:layout_alignLeft="@+id/textViewMiddleBottomString"
            android:layout_alignStart="@+id/textViewMiddleBottomString"
            android:text="@string/tuner_middle_top_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewMiddleBottomString"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonMiddleBottomString"
            android:layout_alignBottom="@+id/buttonMiddleBottomString"
            android:layout_alignLeft="@+id/textViewTopString"
            android:layout_alignStart="@+id/textViewTopString"
            android:text="@string/tuner_middle_bottom_string"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewBottomString"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonBottomString"
            android:layout_alignBottom="@+id/buttonBottomString"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/tuner_bottom_string"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonStopNote"
            style="@style/CategoryStyle"
            android:gravity="center"
            android:background="@drawable/gradient_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp"
            android:text="@string/tuner_stop_note" />


    </RelativeLayout>


</LinearLayout>


